--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="contact">
                 <ul>
                     <li>321564567</li>
-                    <li>sadsadsa@asdsadsad</li>
+                    <li>miguel.vasquez@uniminuto.edu.co</li>
                 </ul>
             </div>
         </section>
@@ -49,7 +49,7 @@
             <div class="contact">
                 <ul>
                     <li>321564567</li>
-                    <li>sadsadsa@asdsadsad</li>
+                    <li>eduar.torres@uniminuto.edu.co</li>
                 </ul>
             </div>
         </section>
@@ -67,7 +67,7 @@
             <div class="contact">
                 <ul>
                     <li>321564567</li>
-                    <li>sadsadsa@asdsadsad</li>
+                    <li>leonardo.renjif@uniminuto.edu.co</li>
                 </ul>
             </div>
         </section>
